--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </p>
 
   <p id="CV">
-    <a id="CV_DL" href="README.md" download>Download my CV</a>
+    <a id="CV_DL" href="CV_Arthur_Correnson.pdf" download>Download my CV</a>
   </p>
 
   <h2>Contacts</h2>
