Fix vertical spaces

--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
     of <a href="https://ocaml.org">OCaml</a> and a great fan of strongly typed functional languages
     in
     general.
+
+
   </p>
+
+  <br>
 
   <p id="CV">
     <a id="CV_DL" href="CV_Arthur_Correnson.pdf" download>Download my CV</a>
@@ -133,14 +137,16 @@
   <h2>Projects</h2>
 
   I've been working on many projects from various domains of Computer science. All of theme are freely distributed and
-  sources may be found on my <a href="https://github.com/jdrprod">github page</a>. My current big project is to develop
+  sources may be found on my <a href="https://github.com/jdrprod">github page</a>. My current big project is to
+  develop
   a Coq-certified SAT solver. My goal with this
   project is to try to provide a safe solver with reasonable performances.
 
   <h2>Student organisations</h2>
 
   I'm one of the co-founders of <a href="https://codeanon.org">CodeAnon</a> student organisation. This organisation
-  aims at helping students developing their computer science projects. We also organize meetings, lectures and workshops
+  aims at helping students developing their computer science projects. We also organize meetings, lectures and
+  workshops
   on various subjects related to research in computer science.
 
   <h2>Skills</h2>
