--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -107,7 +108,7 @@
     <br><br>
 
     I'm a french student in Computer Science at <a href="http://www.ens-rennes.fr/">Ecole
-      Normale Supérieure</a>.
+      Normale Supérieure</a> de Rennes.
 
     I first studied both Math & CS at <a href="https://uni-tlse3.fr">Toulouse III University</a> in a double bachelor.
     Before my third year I got admitted to the ENS where I'm currently a student.
