Update the website

--- a/index.html
+++ b/index.html
@@ -136,13 +136,25 @@
     <li class="contact">Mail : <a href="mailto:arthur.correnson@ens-rennes.fr">arthur.correnson@ens-rennes.fr</a></li>
   </ul>
 
+  <h2>Current work</h2>
+
+  I'm currently doing a research internship at CEA (France) in the field of formal verification. The goal of the
+  internship is to implement and prove (in Coq) floating-point propagators to be included in a SMT solver.
+
   <h2>Projects</h2>
 
   I've been working on many projects from various domains of Computer science. All of theme are freely distributed and
-  sources may be found on my <a href="https://github.com/jdrprod">github page</a>. My current big project is to
-  develop
-  a Coq-certified SAT solver. My goal with this
-  project is to try to provide a safe solver with reasonable performances.
+  sources may be found on my <a href="https://github.com/jdrprod">github page</a>. At the moment I'm mainly focused on
+  the formal proof of solvers & tools for automated reasoning. Below are some of the projects I'm currently working on.
+
+  <ul>
+    <li><a href="https://github.com/jdrprod/SATurn">SATurn</a> is an experiment around the formal verification of a
+      purely
+      functional SAT solver written in Coq</li>
+    <li><a href="https://jdrprod.github.io/modulus/">Modulus</a> : a SMT solver built from the ground up in OCaml by
+      students</li>
+    <li><a href="https://github.com/jdrprod/cqfd">CQFD</a> : A simple automated prover certified in Why3</li>
+  </ul>
 
   <h2>Student organisations</h2>
 
