Fix dead links #1

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     I'm a french student in Computer Science at <a href="http://www.ens-rennes.fr/">Ecole
       Normale Supérieure</a> de Rennes.
 
-    I first studied both Math & CS at <a href="https://uni-tlse3.fr">Toulouse III University</a> in a double bachelor.
+    I first studied both Math & CS at <a href="https://univ-tlse3.fr">Toulouse III University</a> in a double bachelor.
     Before my third year I got admitted to the ENS where I'm currently a student.
 
     <br><br>
@@ -148,7 +148,7 @@
   the formal proof of solvers & tools for automated reasoning. Below are some of the projects I'm currently working on.
 
   <ul>
-    <li><a href="https://github.com/jdrprod/SATurn">SATurn</a> is an experiment around the formal verification of a
+    <li><a href="https://github.com/jdrprod/SATurne">SATurne</a> is an experiment around the formal verification of a
       purely
       functional SAT solver written in Coq</li>
     <li><a href="https://jdrprod.github.io/modulus/">Modulus</a> : a SMT solver built from the ground up in OCaml by
