--- a/index.html
+++ b/index.html
@@ -103,24 +103,16 @@
   <h2>About</h2>
 
   <p>
-    Hello there !
+    Hi 👋,
 
     <br><br>
 
-    I'm a french student in Computer Science at <a href="http://www.ens-rennes.fr/">Ecole
-      Normale Supérieure</a> de Rennes.
+    I'm a student in Computer Science at <a href="http://www.ens-rennes.fr/">École
+      Normale Supérieure</a> de Rennes, France. I'm also an exchange student at Saarland University, Germany.
 
-    I first studied both Math & CS at <a href="https://univ-tlse3.fr">Toulouse III University</a> in a double bachelor.
-    Before my third year I got admitted to the ENS where I'm currently a student.
-
-    <br><br>
-
-    I'm fascinated by programming languages theory, formal methods and solvers design and verification. I'm a happy user
-    of <a href="https://ocaml.org">OCaml</a> and a great fan of strongly typed functional languages
-    in
-    general.
-
-
+    Prior to that, I studied Mathematics & Computer Science as a double bachelor at <a
+      href="https://univ-tlse3.fr">Toulouse III
+      University</a>.
   </p>
 
   <br>
@@ -129,34 +121,47 @@
     <a id="CV_DL" href="CV_Arthur_Correnson.pdf" download>Download my CV</a>
   </p>
 
+  <h2>Interests</h2>
+
+  <p>
+    Computer Science is a very wide area of research and every single topic is interesting...
+    However, programming languages theory and formal methods are my favorite topics.
+    More precisely, I'm interested in automated provers design and verification.
+    I am also a happy user of <a href="https://ocaml.org">OCaml</a> and <a href="https://coq.inria.fr/">Coq</a> and a
+    great fan of strongly typed functional
+    languages in general.
+  </p>
+  <p>
+    Teaching and transmitting has always been important for me. I believe that tools such as automated provers or
+    proof assistants could be used to teach mathematics and theoretical computer science in an easier way. However, such
+    tools are
+    often intended to be used by experts and are therefore hard to work with. There is still a lot of research to do to
+    make formal tools easier to use and I find it super exciting!
+  </p>
+
   <h2>Contacts</h2>
 
   <ul>
-    <li class="contact">GitHub : <a href="https://github.com/jdrprod">jdrprod</a></li>
-    <li class="contact">Mail : <a href="mailto:arthur.correnson@ens-rennes.fr">arthur.correnson@ens-rennes.fr</a></li>
+    <li class="contact">GitHub: <a href="https://github.com/jdrprod">jdrprod</a></li>
+    <li class="contact">Email: <a href="mailto:arthur.correnson@ens-rennes.fr">arthur.correnson@ens-rennes.fr</a></li>
   </ul>
-
-  <h2>Current work</h2>
-
-  I'm currently doing a research internship at CEA (France) in the field of formal verification. The goal of the
-  internship is to implement and prove (in Coq) floating-point propagators to be included in a SMT solver.
 
   <h2>Projects</h2>
 
   I've been working on many projects from various domains of Computer science. All of theme are freely distributed and
-  sources may be found on my <a href="https://github.com/jdrprod">github page</a>. At the moment I'm mainly focused on
+  sources are on my <a href="https://github.com/jdrprod">github page</a>. At the moment I'm mainly focused on
   the formal proof of solvers & tools for automated reasoning. Below are some of the projects I'm currently working on.
 
   <ul>
     <li><a href="https://github.com/jdrprod/SATurne">SATurne</a> is an experiment around the formal verification of a
       purely
       functional SAT solver written in Coq</li>
-    <li><a href="https://jdrprod.github.io/modulus/">Modulus</a> : a SMT solver built from the ground up in OCaml by
-      students</li>
-    <li><a href="https://github.com/jdrprod/cqfd">CQFD</a> : A simple automated prover certified in Why3</li>
+    <li><a href="https://jdrprod.github.io/modulus/">Modulus</a>: an SMT solver built from scratch in OCaml by students
+    </li>
+    <li><a href="https://github.com/jdrprod/cqfd">CQFD</a>: A simple automated prover certified in Why3</li>
   </ul>
 
-  <h2>Student organisations</h2>
+  <h2>Student organizations</h2>
 
   I'm one of the co-founders of <a href="https://codeanon.org">CodeAnon</a> student organisation. This organisation
   aims at helping students developing their computer science projects. We also organize meetings, lectures and
@@ -168,7 +173,7 @@
   <h3>Programming</h3>
 
   <p>
-    OCaml, Coq, C, C++, Java, Python, x86, ARM
+    OCaml, Coq, Rust, C/C++, Java, JavaScript, Python, x86, ARM
   </p>
 
   <h3>Tools</h3>
