--- a/index.html
+++ b/index.html
@@ -168,13 +168,16 @@
         href="https://hal.inria.fr/hal-03626792/document">pdf</a>]
       [<a href="https://hal.inria.fr/hal-03626792/">hal</a>]
     </li>
+    <li>Arthur Correnson. Formal Verification of a Lazy Model Checker. <i>ICFP SRC</i>, Sep 2022, Ljubjana, Solvenia.
+      <br>[<a href="/">abstract</a>] [<a href="/">poster</a>]
+    </li>
   </ol>
 
   <h2>Projects</h2>
 
   I've been working on many projects from various domains of Computer science. All of theme are freely distributed and
-  sources are on my <a href="https://github.com/jdrprod">github page</a>. Below are some of the projects that I think I
-  worth highlighting.
+  sources are on my <a href="https://github.com/jdrprod">github page</a>. Below are some of the projects that I think
+  are worth highlighting.
 
   <h3>Professional and academic projects</h3>
 
