--- a/index.html
+++ b/index.html
@@ -198,24 +198,21 @@
     <li><a href="https://jdrprod.github.io/modulus/">Modulus</a>: a modular constraint solver built from scratch in
       OCaml
     </li>
-    <!-- <li><a href="https://github.com/jdrprod/cqfd">CQFD</a>: A simple automated prover certified in Why3</li> -->
   </ul>
-
-
-
 
   <h2>Student organizations</h2>
 
   I'm one of the co-founders of <a href="https://codeanon.org">CodeAnon</a> student organisation. This organisation
   aims at helping students developing their computer science projects. We also organize meetings, lectures and
-  workshops
-  on various subjects related to research in computer science.
+  workshops on various subjects related to research in computer science.
 
   <h2>Contacts</h2>
 
   <ul>
-    <li class="contact">GitHub: <a href="https://github.com/jdrprod">jdrprod</a></li>
+    <li class="contact">GitHub: <a href="https://github.com/acorrenson">acorrenson</a></li>
     <li class="contact">Email: <a href="mailto:arthur.correnson@ens-rennes.fr">arthur.correnson@ens-rennes.fr</a></li>
+    <li class="contact">Linkedin: <a href="https://www.linkedin.com/in/arthur-correnson-b17ab9146/">Arthur Correnson</a>
+    </li>
   </ul>
 
   <footer>
