--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="H2m1p9gqVOPWmA-m9rO89kSOZO0GHOX_Lq0WTKZ0uUg" />
   <title>Arthur Correnson</title>
   <style>
     body {
