--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     .quote {
       font-style: italic;
-      color: grey;
+      color: #333;
     }
 
 
@@ -54,7 +54,7 @@
     }
 
     .quote_from {
-      color: grey;
+      color: #333;
     }
 
     .quote_from::before {
