--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -1,6 +1,28 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="H2m1p9gqVOPWmA-m9rO89kSOZO0GHOX_Lq0WTKZ0uUg" />
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="stylesheet" href="style.css">
+  <title>Arthur Correnson</title>
+</head>
+
+<body>
+  <section class="section">
+    <div class="container">
+      <header class="header">
+        <h1>Arthur Correnson</h1>
+        <hr>
+        <nav>
+          <a href="/">about</a>
+          <a href="/publications">publications</a>
+          <a href="/">blog</a>
+        </nav>
+      </header>
+      
 
 <h2>Publications</h2>
 
@@ -49,4 +71,12 @@
   </nav>
 </div>
 
-{% endblock content %}
+
+    </div>
+    <footer>
+      Copyright (c) Arthur Correnson
+    </footer>
+  </section>
+</body>
+
+</html>
