--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,28 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="H2m1p9gqVOPWmA-m9rO89kSOZO0GHOX_Lq0WTKZ0uUg" />
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="stylesheet" href="style.css">
+  <title>Arthur Correnson</title>
+</head>
+
+<body>
+  <section class="section">
+    <div class="container">
+      <header class="header">
+        <h1>Arthur Correnson</h1>
+        <hr>
+        <nav>
+          <a href="/">about</a>
+          <a href="/publications">publications</a>
+          <a href="/">blog</a>
+        </nav>
+      </header>
+      
 <article>
   <h2>About Me</h2>
   <div class="contact">
@@ -46,4 +68,12 @@
   I received this award for my work on the <em>Formal Verification of a Lazy Abstraction Model Checker</em> supervised
   by <a href="https://www.react.uni-saarland.de/people/finkbeiner.html">Bernd Finkbeiner</a>.
 </article>
-{% endblock content %}
+
+    </div>
+    <footer>
+      Copyright (c) Arthur Correnson
+    </footer>
+  </section>
+</body>
+
+</html>
